fixed all that weird spacing and sizing with the passwords and refresh

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -29,8 +29,4 @@ body {
 .password {
 	font-size: 145px;
 	width: 696px;
-    margin-left: 0;
-}
-#listview {
-	padding-left: 0;
 }
